**1.69.0** -
* Store the selected buy charge in the save state so it's still selected after a reload
* Updated dependencies
* Beer Factory materials are grouped now. Each group can be collapsed
* Adjusted Factory Extension production rate:
    - Factory Extensions can store more materials depending on the amount of factories the extension belongs to
    - Factory Extensions can handle more materials in a single iteration
* Bugfixes:
    - Workers' Lodges initially dispaly a 100% production boost (#98)
    - Project based factory extension popover content positioning (#102)
    - Icon for blacksmith is missing the workpiece
    - Skip unnecessary Beer Factory rendering during game initialization
    - Trading posts provide access to materials which aren't yet unlocked
    - Game Speed modifier is applied twice to the traded amount of trading posts
    - Building statistic graphs for Bottle Cap Factories show "plops" (#94)
    - Endless buff after sacrifice (#106)
    - Beer Blender Bar: Chili doesn't affect the price of Bottle Cap Factories
    - The displayed progress of a restarted research project after a reload is calculated wrong
    - Fixed some typos

**1.68.0** - 16.03.2020
* Add additional upgrade paths to the Beer Factories
* Update dependencies
* Update build process of the application

**1.67.0** - 10.01.2020
* Add a new ingredient to the Beer Blender Bar (#67)
* Refactored Beer Factories to represent the current factory production, storage and transport multiplier as a ComposedValue
* Bugfixes:
    - Equipping the Blueberry at the Beer Blender Bar leads to a NaN Mana per second display error
    - Fix unique build equipments (#92)
    - Fix auto cloning for Bottle Cap Factories (#95)

**1.66.0** - 15.12.2019
* Added cloning to Bottle Cap Factories (#87)
* Balanced Beerwarts
    - Increased magician price growing
    - Increased training price growing
    - Limited the training duration to max. 1000 days (#54)